--- a/libft/Makefile
+++ b/libft/Makefile
@@ -78,7 +78,8 @@ SRCS = 	ft_atoi.c \
 		ft_sizeof_nb_base.c \
 		ft_strlen_printf.c \
 		ft_free.c \
-		ft_isextension.c 
+		ft_isextension.c \
+		ft_strcpy.c \
 
 OBJS = $(SRCS:.c=.o)
 HEADER = libft.h
